<resources>
    <string name="app_name">Time Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Time Tracker</string>
    <string name="nav_header_subtitle">nova@wittam.uk</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="settings_defaults">Defaults</string>
    <string name="settings_misc">Miscellaneous</string>
    <string name="settings_sync">Synchronisation</string>

    <!-- Defaults Preferences -->
    <string name="setting_default_rate">Default Rate</string>
    <string name="setting_default_break">Default Break Length</string>
    <string name="setting_default_customer">Default Customer</string>

    <!-- Misc Preferences -->
    <string name="setting_misc_app_theme">App Theme</string>
    <string name="setting_misc_show_ads">Show Ads</string>

    <!-- Sync Preferences -->
    <string name="setting_sync_enable">Enable Synchronisation</string>
    <string name="setting_sync_to">Sync Destination</string>
    <string name="setting_sync_ip">Server IP Address</string>
    <string name="setting_sync_port">Server Port</string>
    <string name="setting_sync_frequency">Sync Frequency</string>
</resources>