<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.wittamit.timetracker.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_nav_dashboard_to_settings"
            app:destination="@id/nav_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.wittamit.timetracker.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_nav_history_to_settings"
            app:destination="@id/nav_settings" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.wittamit.timetracker.ui.settings.SettingsFragment"
        android:label="@string/menu_settings" />

</navigation>